<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.siddhesh.obvioustest.viewmodels.ImageGridActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ImageGridActivity">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:indeterminateTint="@color/black"
            android:visibility="@{(vm.isApiLoading &amp;&amp; !vm.isError)? View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:visibility="@{(!vm.isApiLoading &amp;&amp; !vm.isError)? View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_please_retry_again"
            android:textColor="@color/black"
            android:visibility="@{vm.isError? View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="@{()->vm.retry()}"
            android:text="@string/retry"
            android:visibility="@{vm.isError? View.VISIBLE:View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_error_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
