...
        <variable
            name="vm"
            type="com.siddhesh.obvioustest.viewmodels.ImageItemViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">
...
